@@ -2404,9 +2404,7 @@ on top/bottom and nothing was done.
 
 \wxheading{Remarks}
 
-This function is currently only implemented under MSW and wxTextCtrl under
-wxGTK (it also works for wxScrolledWindow derived classes under all
-platforms).
+This function is currently only implemented under MSW and wxGTK.
 
 \wxheading{See also}
 
